--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,35 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
+
+*.o
+*.obj
+
+*.exe
+*.out
 *.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+
+*.dSYM/
+*.pdb
+
+*.dep
+
+/build/
+bin/
+obj/
+
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+*.tmp
+*.temp
+*.log
+*.swp
+
+.DS_Store
+Thumbs.db
+
+# CMake files
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
